fix footer logo on firefox

--- a/css/main.css
+++ b/css/main.css
@@ -761,9 +761,6 @@ footer>.content>* {
 /* -------------------------------------------------------------------------------------- */
 
 @media (min-width: 768px) {
-	.logo {
-		width: 20%;
-	}
 	.fas.fa-align-justify {
 		display: none;
 	}
